# pyrosettacluster-examples

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md
envs/pixi/: pixi.toml
envs/pixi-2/: pixi.toml
envs/uv/: pyproject.toml
notebooks/: reproduce_example_1.ipynb  reproduce_example_2.ipynb  run_example_1.ipynb  run_example_2.ipynb
pymol/: example_1_highest_energy.pml  example_1_lowest_energy.pml  example_2_cpu.pml  example_2_gpu.pml
results/example_2/cpu/: original_vs_reproduce_comparison_example-2.json
results/example_2/gpu/: original_vs_reproduce_comparison_example-2.json
src/: utils.py
src/plotting/: analyze_example_1.py  analyze_example_2.py  analyze_reproduce_example_2.py  config.py  example_1.py  get_bb_rmsd_nosuper_example_2.py  plot_example_1.py
src/protocols/: foundry.py  pyrosetta.py
src/rosetta_scripts/: blueprintbdr.xml  cart_min.xml  cst_cart_min_poly_gly.xml  minimize.xml
src/runners/: example_0.py  example_1.py  example_2.py
