[project]
authors = [{name = "Jason C. Klima"}]
dependencies = [
    "attrs>=19.3.0",
    "billiard>=3.6.3.0",
    "blosc>=1.8.3",
    "cloudpickle>=1.5.0",
    "cryptography>=2.8",
    "dask>=2.16.0",
    "dask-jobqueue>=0.7.0",
    "distributed>=2.16.0",
    "gitpython>=3.1.1",
    "jupyter>=1.0.0",
    "numpy>=1.17.3",
    "pandas>=0.25.2",
    "py3Dmol>=0.8.0",
    "pyrosetta>=2026.3",
    "python-xz>=0.4.0",
    "scipy>=1.4.1",
    "traitlets>=4.3.3",
]
description = "uv project for PyRosettaCluster"
maintainers = [{name = "Jason C. Klima"}]
name = "pyrosettacluster-uv-project"
requires-python = "==3.14.*"
version = "1.0.0"

[tool.uv]
find-links = [
    "https://west.rosettacommons.org/pyrosetta/quarterly/release.cxx11thread.serialization/",
    # "https://graylab.jhu.edu/download/PyRosetta4/archive/release-quarterly/release.cxx11thread.serialization/",
]
